Replace UrlEncoded.Tuple with Map.Entry and simplify iterator