@@ -21,19 +21,14 @@ import org.jetbrains.annotations.NotNullByDefault;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.AbstractMap;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.BiConsumer;
 
 /// An immutable Java representation of WHATWG `URLSearchParams`.
 @NotNullByDefault
 public final class WebURLSearchParams implements Iterable<Map.Entry<String, String>> {
     /// The ordered list of name-value tuples.
-    private final @Unmodifiable List<UrlEncoded.Tuple> list;
+    private final @Unmodifiable List<Map.Entry<String, String>> list;
 
     /// Creates an empty search parameter list.
     public WebURLSearchParams() {
@@ -47,31 +42,23 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
 
     /// Creates search parameters from map entries.
     public WebURLSearchParams(Map<String, String> init) {
-        ArrayList<UrlEncoded.Tuple> tuples = new ArrayList<>();
-        for (Map.Entry<String, String> entry : init.entrySet()) {
-            tuples.add(new UrlEncoded.Tuple(entry.getKey(), entry.getValue()));
-        }
-        this.list = immutableTuples(tuples);
+        this.list = immutableEntries(init.entrySet());
     }
 
     /// Creates search parameters from iterable map entries.
     public WebURLSearchParams(Iterable<? extends Map.Entry<String, String>> init) {
-        ArrayList<UrlEncoded.Tuple> tuples = new ArrayList<>();
-        for (Map.Entry<String, String> entry : init) {
-            tuples.add(new UrlEncoded.Tuple(entry.getKey(), entry.getValue()));
-        }
-        this.list = immutableTuples(tuples);
+        this.list = immutableEntries(init);
     }
 
     /// Creates a detached copy of another search parameter list.
     public WebURLSearchParams(WebURLSearchParams init) {
-        this.list = immutableTuples(init.list);
+        this.list = immutableEntries(init.list);
     }
 
     /// Creates search parameters from a query string with optional question-mark preservation.
     WebURLSearchParams(String init, boolean doNotStripQuestionMark) {
         String input = !doNotStripQuestionMark && init.startsWith("?") ? init.substring(1) : init;
-        this.list = immutableTuples(UrlEncoded.parseUrlencodedString(input));
+        this.list = immutableEntries(UrlEncoded.parseUrlencodedString(input));
     }
 
     /// Creates search parameters from an already-parsed URL query.
@@ -87,8 +74,8 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
 
     /// Returns search parameters with a tuple appended.
     public WebURLSearchParams append(String name, String value) {
-        ArrayList<UrlEncoded.Tuple> tuples = mutableTuples();
-        tuples.add(new UrlEncoded.Tuple(name, value));
+        ArrayList<Map.Entry<String, String>> tuples = mutableEntries();
+        tuples.add(Map.entry(name, value));
         return new WebURLSearchParams(tuples, true);
     }
 
@@ -99,16 +86,16 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
 
     /// Returns search parameters without tuples that have the given name and value.
     public WebURLSearchParams delete(String name, @Nullable String value) {
-        ArrayList<UrlEncoded.Tuple> tuples = mutableTuples();
-        tuples.removeIf(tuple -> tuple.name().equals(name) && (value == null || tuple.value().equals(value)));
+        ArrayList<Map.Entry<String, String>> tuples = mutableEntries();
+        tuples.removeIf(tuple -> tuple.getKey().equals(name) && (value == null || tuple.getValue().equals(value)));
         return new WebURLSearchParams(tuples, true);
     }
 
     /// Returns the first value for a name, or `null` when absent.
     public @Nullable String get(String name) {
-        for (UrlEncoded.Tuple tuple : list) {
-            if (tuple.name().equals(name)) {
-                return tuple.value();
+        for (Map.Entry<String, String> tuple : list) {
+            if (tuple.getKey().equals(name)) {
+                return tuple.getValue();
             }
         }
         return null;
@@ -117,9 +104,9 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
     /// Returns all values for a name.
     public @Unmodifiable List<String> getAll(String name) {
         List<String> output = new ArrayList<>();
-        for (UrlEncoded.Tuple tuple : list) {
-            if (tuple.name().equals(name)) {
-                output.add(tuple.value());
+        for (Map.Entry<String, String> tuple : list) {
+            if (tuple.getKey().equals(name)) {
+                output.add(tuple.getValue());
             }
         }
         return Collections.unmodifiableList(output);
@@ -132,8 +119,8 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
 
     /// Returns whether a tuple with the given name and value exists.
     public boolean has(String name, @Nullable String value) {
-        for (UrlEncoded.Tuple tuple : list) {
-            if (tuple.name().equals(name) && (value == null || tuple.value().equals(value))) {
+        for (Map.Entry<String, String> tuple : list) {
+            if (tuple.getKey().equals(name) && (value == null || tuple.getValue().equals(value))) {
                 return true;
             }
         }
@@ -142,16 +129,16 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
 
     /// Returns search parameters with a name set to one value, removing later duplicates.
     public WebURLSearchParams set(String name, String value) {
-        ArrayList<UrlEncoded.Tuple> tuples = mutableTuples();
+        ArrayList<Map.Entry<String, String>> tuples = mutableEntries();
         boolean found = false;
         for (int i = 0; i < tuples.size(); ) {
-            UrlEncoded.Tuple tuple = tuples.get(i);
-            if (tuple.name().equals(name)) {
+            Map.Entry<String, String> tuple = tuples.get(i);
+            if (tuple.getKey().equals(name)) {
                 if (found) {
                     tuples.remove(i);
                 } else {
                     found = true;
-                    tuples.set(i, new UrlEncoded.Tuple(name, value));
+                    tuples.set(i, Map.entry(name, value));
                     i++;
                 }
             } else {
@@ -159,15 +146,15 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
             }
         }
         if (!found) {
-            tuples.add(new UrlEncoded.Tuple(name, value));
+            tuples.add(Map.entry(name, value));
         }
         return new WebURLSearchParams(tuples, true);
     }
 
     /// Returns search parameters sorted by name while preserving relative order for equal names.
     public WebURLSearchParams sort() {
-        ArrayList<UrlEncoded.Tuple> tuples = mutableTuples();
-        tuples.sort((left, right) -> left.name().compareTo(right.name()));
+        ArrayList<Map.Entry<String, String>> tuples = mutableEntries();
+        tuples.sort((left, right) -> left.getKey().compareTo(right.getKey()));
         return new WebURLSearchParams(tuples, true);
     }
 
@@ -175,8 +162,8 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
     ///
     /// The first action argument is the value, and the second action argument is the name.
     public void forEach(BiConsumer<String, String> action) {
-        for (UrlEncoded.Tuple tuple : list) {
-            action.accept(tuple.value(), tuple.name());
+        for (Map.Entry<String, String> tuple : list) {
+            action.accept(tuple.getValue(), tuple.getKey());
         }
     }
 
@@ -188,8 +175,8 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
     /// Returns all names in tuple order.
     public @Unmodifiable List<String> keys() {
         List<String> output = new ArrayList<>();
-        for (UrlEncoded.Tuple tuple : list) {
-            output.add(tuple.name());
+        for (Map.Entry<String, String> tuple : list) {
+            output.add(tuple.getKey());
         }
         return Collections.unmodifiableList(output);
     }
@@ -197,8 +184,8 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
     /// Returns all values in tuple order.
     public @Unmodifiable List<String> values() {
         List<String> output = new ArrayList<>();
-        for (UrlEncoded.Tuple tuple : list) {
-            output.add(tuple.value());
+        for (Map.Entry<String, String> tuple : list) {
+            output.add(tuple.getValue());
         }
         return Collections.unmodifiableList(output);
     }
@@ -206,7 +193,7 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
     /// Returns an iterator over immutable map entries.
     @Override
     public Iterator<Map.Entry<String, String>> iterator() {
-        return new EntryIterator(list.iterator());
+        return list.iterator();
     }
 
     /// Serializes the parameter list.
@@ -215,43 +202,25 @@ public final class WebURLSearchParams implements Iterable<Map.Entry<String, Stri
         return UrlEncoded.serializeUrlencoded(list);
     }
 
-    /// Creates immutable tuple storage.
-    private static List<UrlEncoded.Tuple> immutableTuples(List<UrlEncoded.Tuple> tuples) {
-        return Collections.unmodifiableList(new ArrayList<>(tuples));
+    /// Creates immutable entry storage.
+    private static List<Map.Entry<String, String>> immutableEntries(Iterable<? extends Map.Entry<String, String>> entries) {
+        ArrayList<Map.Entry<String, String>> copy =
+                entries instanceof Collection<?> collection
+                        ? new ArrayList<>(collection.size())
+                        : new ArrayList<>();
+        for (Map.Entry<String, String> entry : entries) {
+            copy.add(Map.entry(entry.getKey(), entry.getValue()));
+        }
+        return List.copyOf(copy);
     }
 
-    /// Creates mutable tuple storage from this parameter list.
-    private ArrayList<UrlEncoded.Tuple> mutableTuples() {
+    /// Creates mutable entry storage from this parameter list.
+    private ArrayList<Map.Entry<String, String>> mutableEntries() {
         return new ArrayList<>(list);
     }
 
-    /// Creates search parameters from tuple storage.
-    private WebURLSearchParams(List<UrlEncoded.Tuple> tuples, boolean ignored) {
-        this.list = immutableTuples(tuples);
-    }
-
-    /// Iterator over immutable search parameter entries.
-    @NotNullByDefault
-    private static final class EntryIterator implements Iterator<Map.Entry<String, String>> {
-        /// The tuple iterator.
-        private final Iterator<UrlEncoded.Tuple> iterator;
-
-        /// Creates an entry iterator.
-        private EntryIterator(Iterator<UrlEncoded.Tuple> iterator) {
-            this.iterator = iterator;
-        }
-
-        /// Returns whether another entry exists.
-        @Override
-        public boolean hasNext() {
-            return iterator.hasNext();
-        }
-
-        /// Returns the next entry.
-        @Override
-        public Map.Entry<String, String> next() {
-            UrlEncoded.Tuple tuple = iterator.next();
-            return new AbstractMap.SimpleImmutableEntry<>(tuple.name(), tuple.value());
-        }
+    /// Creates search parameters from entry storage.
+    private WebURLSearchParams(List<Map.Entry<String, String>> entries, boolean ignored) {
+        this.list = immutableEntries(entries);
     }
 }
